# orbit

./: .claude  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: build_wiki_home.py  bump_versions.py  preview_release.py  update_docs.py
.github/workflows/: ci.yml  prepare-release.yml  release.yml
.opencode/agents/: build.md  debug.md  implementation.md  plan.md  review.md
.opencode/commands/: session-close.md  session-start.md
bins/orbit/: Cargo.toml
bins/orbit-dev/: Cargo.toml
bins/orbit-dev/src/: main.rs
bins/orbit/src/: main.rs
commands/: create-command.md  create-hook.md  git-commit.md  git-pr.md  git-release.md  init-scope.md  session-close.md  session-start.md  sonar-scan.md
config/catalog/: engines.toml  mcps.toml
crates/orbit-cli/: Cargo.toml
crates/orbit-cli/src/: auto_update.rs  banner.rs  lib.rs  update_check.rs
crates/orbit-cli/src/commands/: auth.rs  command.rs  completions.rs  config.rs  context.rs  daemon.rs  dev.rs  discover.rs  doctor.rs  engines.rs  env.rs  hooks.rs  init.rs  jira.rs  launch.rs  ls.rs  man.rs  mcp.rs  memory.rs  mod.rs  mode.rs  notify.rs  plan.rs  plugins.rs  secret.rs  serve.rs  session.rs  setup.rs  snapshot.rs  status.rs  update.rs  workspace.rs
crates/orbit-client/: Cargo.toml
crates/orbit-client/src/: ipc.rs
crates/orbit-core/: Cargo.toml  build.rs
crates/orbit-core/src/: audit.rs  builtin_command.rs  catalog.rs  data_paths.rs  engine.rs  engine_hook.rs  error.rs  eval.rs  hooks.rs  ipc.rs  jira.rs  lib.rs  memory.rs  net.rs  notify.rs  plan.rs  plugin.rs  resolver.rs  schedule.rs  secrets.rs  session.rs  template.rs  user_config.rs  venv.rs  workspace_config.rs  workspace_registry.rs
crates/orbit-core/src/config/: mod.rs
crates/orbit-core/src/context/: mod.rs
crates/orbit-daemon/: Cargo.toml
crates/orbit-daemon/src/: archival.rs  auth.rs  jira_poller.rs  lib.rs  mdns_announce.rs  plan_supervisor.rs  scheduler.rs  serve.rs  server.rs  session_monitor.rs  webhook.rs
crates/orbit-engine/: Cargo.toml
crates/orbit-engine/src/: lib.rs  resolver.rs
crates/orbit-engine/src/config/: jsonc.rs  mcp.rs  mod.rs
crates/orbit-engine/src/launcher/: agents.rs  engine_hooks.rs  mod.rs  plugin_hooks.rs  render.rs  runtime.rs  tmux.rs
crates/orbit-eval/: Cargo.toml
crates/orbit-eval/src/: lib.rs
crates/orbit-integration-tests/: Cargo.toml
crates/orbit-integration-tests/tests/: daemon.rs  executor.rs  plan.rs  schedule_retry.rs  streaming.rs  supervisor.rs
crates/orbit-integration-tests/tests/common/: mod.rs
crates/orbit-planner/: Cargo.toml
crates/orbit-planner/src/: backend.rs  intent.rs  lib.rs  planner.rs  policy.rs  replanner.rs  selector.rs  templates.rs  verifier.rs
crates/orbit-planner/src/templates/: code.md  pr.md  review.md  test.md  verify.md
crates/orbit-tui/: Cargo.toml
crates/orbit-tui/src/: app.rs  lib.rs  mcp.rs  theme.rs  widget.rs
crates/orbit-tui/src/views/: adf.rs  dashboard.rs  launch.rs  mod.rs  peers.rs  plans.rs  popup.rs  schedules.rs  scopes.rs  sessions.rs  system.rs  tasks.rs  workspaces.rs
hooks/: aws-destructive-guard.toml  desktop-notify.toml  gcp-destructive-guard.toml  kubectl-destructive-guard.toml  session-logging.toml
plugins/: cargo.toml  headroom.toml  jira.toml  lucid.toml  make.toml  markitdown.toml  npm.toml  playwright.toml  pytest.toml  rust-analyzer.toml  sonarcloud.toml
wiki/: Arquitectura.md  Comandos.md  Compartir-y-descubrir.md  Configuracion.md  Contribuir.md  Engines.md  Inicio.md  Lanzar-y-sesiones.md  Modelo-de-workspace.md  Plugins.md  Primeros-pasos.md  Releases.md  Secretos-y-variables.md  Servidores-MCP.md  Sistema-de-planes.md
