[workspace]
members = [
    "bins/orbit",
    "bins/orbit-dev",
    "crates/orbit-core",
    "crates/orbit-cli",
    "crates/orbit-tui",
    "crates/orbit-daemon",
    "crates/orbit-client",
    "crates/orbit-engine",
]
resolver = "2"

[workspace.package]
version = "0.10.1"
edition = "2024"
authors = ["Eloir Corona"]
license = "MIT"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Utilities
directories = "6"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"

# Internal crates
orbit-core = { path = "crates/orbit-core" }
orbit-cli = { path = "crates/orbit-cli" }
orbit-tui = { path = "crates/orbit-tui" }
orbit-daemon = { path = "crates/orbit-daemon" }
orbit-client = { path = "crates/orbit-client" }
orbit-engine = { path = "crates/orbit-engine" }
