[workspace]
members = [
    "bins/orbit",
    "bins/orbit-dev",
    "crates/orbit-core",
    "crates/orbit-cli",
    "crates/orbit-tui",
    "crates/orbit-daemon",
    "crates/orbit-client",
    "crates/orbit-engine",
    "crates/orbit-planner",
    "crates/orbit-eval",
]
resolver = "2"

[workspace.package]
version = "0.10.5"
edition = "2024"
authors = ["Eloir Corona"]
license = "MIT"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Utilities
directories = "6"
tempfile = "3"
sha2 = "0.11"
hex = "0.4"
keyring = "3"

# Internal crates
orbit-core = { path = "crates/orbit-core" }
orbit-cli = { path = "crates/orbit-cli" }
orbit-tui = { path = "crates/orbit-tui" }
orbit-daemon = { path = "crates/orbit-daemon" }
orbit-client = { path = "crates/orbit-client" }
orbit-engine = { path = "crates/orbit-engine" }
orbit-planner = { path = "crates/orbit-planner" }
orbit-eval = { path = "crates/orbit-eval" }
