[package]
name = "orbit-cli"
description = "CLI command definitions: shared between orbit (stable) and orbit-dev"
version.workspace = true
edition.workspace = true

[dependencies]
orbit-core.workspace = true
orbit-client.workspace = true
orbit-engine.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true }
