[package]
name = "orbit-cli"
description = "CLI command definitions: shared between orbit (stable) and orbit-dev"
version.workspace = true
edition.workspace = true

[dependencies]
orbit-core.workspace = true
orbit-client.workspace = true
orbit-engine.workspace = true
orbit-planner.workspace = true
orbit-tui.workspace = true
orbit-daemon.workspace = true
clap.workspace = true
crossterm.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
futures-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true }
directories.workspace = true
tempfile.workspace = true
hostname = { workspace = true }
mdns-sd = { workspace = true }
