[package]
name = "orbit-planner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orbit-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
directories = { workspace = true }
