[package]
name = "orbit-tui"
description = "TUI components: interactive interface built with ratatui"
version.workspace = true
edition.workspace = true

[dependencies]
orbit-core.workspace = true
orbit-client.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true }
directories.workspace = true
